[package]
name = "leaf-render"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
minijinja = { version = "1.0", features = ["loader"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
web-sys = { version = "0.3.77", features = ["Window"] }
js-sys = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[dependencies.wee_alloc]
version = "0.4"